force-app/main/default/objects/Integration_Log__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <label>Initiated By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>