force-app/main/default/objects/Integration_Log__c/fields/Integration_Category__c.field-meta.xml
<CustomField>
    <fullName>Integration_Category__c</fullName>
    <label>Integration Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Category</valueSetName>
    </valueSet>
</CustomField>