force-app/main/default/objects/Integration_Log__c/fields/Integration_Service__c.field-meta.xml
<CustomField>
    <fullName>Integration_Service__c</fullName>
    <label>Integration Service</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Service</valueSetName>
    </valueSet>
</CustomField>