force-app/main/default/objects/Integration_Log__c/fields/Retry_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Retry_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Enabled</label>
    <type>Checkbox</type>
</CustomField>