force-app/main/default/objects/Integration_Log__c/fields/Total_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Total_Attempts__c</fullName>
    <label>Total Attempts</label>
    <summarizedField>Integration_Attempt__c.Attempt_Number__c</summarizedField>
    <summaryForeignKey>Integration_Attempt__c.Integration_Log__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>