force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Attempts__c</columns>
    <columns>Next_Retry_At__c</columns>
    <columns>Integration_Service__c</columns>
    <columns>Integration_Category__c</columns>
    <columns>Initiated_By__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>